# A2A

./: .gitignore  README.md
samples/rust/: Cargo.toml  README.md
samples/rust/src/: client.rs  error.rs  lib.rs  server.rs  store.rs  tests.rs  types.rs
samples/rust/src/agents/: README.md
samples/rust/src/agents/openai_agent/: README.md  mod.rs  server.rs
